fix(activity-calendar) Hide id and select columns from the page (should be visible by default, in the table component)

--- a/src/app/activity-calendar/metier/gear-physical-features.table.scss
+++ b/src/app/activity-calendar/metier/gear-physical-features.table.scss
@@ -1,3 +1,2 @@
-.table-container .mat-column-metier {
-  padding-left: var(--ion-grid-column-padding);
+.table-container {
 }
